# fishpi-badge-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
docs/: README.Docker.md
src/: badge.rs  cache.rs  image.rs  main.rs  template.rs
static/: 404.html  index.html
static/assets/: main.js  style.css
