[package]
name = "fishpi-badge-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
image = { version = "0.24", features = ["webp-encoder"] }
base64 = "0.21"
tera = "1.19"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
once_cell = "1.19"
palette = "0.7"
lru = "0.16.2"