[package]
name = "fishpi-badge-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.6", default-features = false, features = ["http1", "tokio", "query"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["stream"] }
image = { version = "0.24", features = ["webp-encoder"] }
base64 = "0.21"
tera = "1.19"
anyhow = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
once_cell = "1.19"
palette = "0.7"